--- a/app/src/main/res/layout/activity_admi_entrar_crear.xml
+++ b/app/src/main/res/layout/activity_admi_entrar_crear.xml
@@ -9,6 +9,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingLeft= "16dp"
+        android:paddingRight= "16dp"
+        android:layout_marginTop="90dp"
         android:orientation="vertical">
 
         <ImageView
