--- a/app/src/main/res/layout/activity_entrar_crear_repartidor.xml
+++ b/app/src/main/res/layout/activity_entrar_crear_repartidor.xml
@@ -9,8 +9,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteY="16dp">
+        android:paddingLeft= "16dp"
+        android:paddingRight= "16dp"
+        android:layout_marginTop="130dp"
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/iniciarSesion"
