--- a/app/src/main/res/layout/activity_admi_entrar_crear.xml
+++ b/app/src/main/res/layout/activity_admi_entrar_crear.xml
@@ -19,15 +19,16 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginBottom="30dp"
-            android:layout_marginStart="120dp"
+            android:layout_marginStart="100dp"
             android:layout_marginTop="40dp"
             app:srcCompat="@drawable/logo" />
 
+
         <Button
-            android:id="@+id/crear"
+            android:id="@+id/crearCuenta"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="20dp"
             android:background="#82E0AA"
             android:radius="50dp"
@@ -37,7 +38,7 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="30dp"
             android:fontFamily="light italic"
             android:text="¿Ya tienes una cuenta?"
@@ -46,10 +47,10 @@
             android:textStyle="bold"/>
 
         <Button
-            android:id="@+id/entrar"
+            android:id="@+id/iniciarSesion"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="200dp"
+            android:layout_marginStart="160dp"
             android:layout_marginTop="-35dp"
             android:text="Iniciar Sesión"
             style="@style/Widget.AppCompat.Button.Borderless"/>
