--- a/app/src/main/res/layout/activity_quien_eres.xml
+++ b/app/src/main/res/layout/activity_quien_eres.xml
@@ -16,15 +16,16 @@
 
         <TextView
             android:id="@+id/editText"
-            android:layout_width="match_parent"
+            android:layout_width="365dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="-20dp"
             android:layout_marginTop="40dp"
             android:ems="10"
             android:inputType="textPersonName"
             android:paddingLeft="60dp"
             android:text="Regístrate en OrdersHome"
             android:textColor="#190707"
-            android:textSize="22dp" />
+            android:textSize="25dp" />
 
         <ImageView
             android:id="@+id/imageView"
@@ -32,7 +33,7 @@
             android:layout_height="130dp"
             android:layout_centerInParent="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginStart="116dp"
+            android:layout_marginStart="100dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/logo"
             android:gravity="center"
@@ -42,7 +43,7 @@
             android:id="@+id/textView"
             android:layout_width="64dp"
             android:layout_height="50dp"
-            android:layout_marginStart="145dp"
+            android:layout_marginStart="125dp"
             android:layout_marginTop="0dp"
             android:layout_marginBottom="20dp"
             android:fontFamily="light italic"
@@ -56,6 +57,7 @@
             android:id="@+id/administrador"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:layout_gravity="top|left|right|center_vertical|center_horizontal|fill_horizontal|start|end"
             android:layout_marginLeft="28dp"
             android:layout_marginBottom="30dp"
@@ -69,13 +71,14 @@
 
         <Button
             android:id="@+id/repartidor"
-            android:layout_width="320dp"
-            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:layout_gravity="top|left|right|center_vertical|center_horizontal|fill_horizontal|start|end"
             android:layout_marginLeft="28dp"
             android:layout_marginBottom="30dp"
             android:background="@drawable/boton_redondo"
-            android:drawableTop="@drawable/motorbike"
+            android:drawableTop="@drawable/home"
             android:fontFamily="serif"
             android:gravity="center"
             android:text="Repartidor"
@@ -86,13 +89,14 @@
 
         <Button
             android:id="@+id/cliente"
-            android:layout_width="320dp"
-            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:layout_gravity="top|left|right|center_vertical|center_horizontal|fill_horizontal|start|end"
             android:layout_marginLeft="28dp"
             android:layout_marginBottom="30dp"
             android:background="@drawable/boton_redondo"
-            android:drawableTop="@drawable/face"
+            android:drawableTop="@drawable/home"
             android:fontFamily="serif"
             android:gravity="center"
             android:text="Cliente"
